verstappen/src/styles/IntroStyles/IntroText.css
.intro-text-container {
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;
    text-align: center;
    z-index: 10;
    width: 90%;
    max-width: 1100px;

    will-change: opacity, filter, margin-top;
}

.intro-subtitle {
    color: rgb(255, 255, 255);
    white-space: nowrap;
    font-size: clamp(1rem, 1vw + 0.8rem, 1.6rem);
    font-family: 'Space Grotesk', sans-serif;
    margin-top: clamp(0.5rem, 0.8vw, 1rem);
    z-index: 2;
}

text {
    text-rendering: geometricPrecision;
    -webkit-font-smoothing: antialiased;
}

